# libligma

./: README.md  grammar.yml  meson.build  wrong.yml
include/libligma/: action.hh  action_set.hh  asset.hh  document.hh  first_set.hh  follow_set.hh  goto_set.hh  grammar.hh  index_t.hh  item.hh  item_set.hh  production.hh  record_set.hh  resource.hh  symbol.hh  symbols.hh  types.hh  yaml_document.hh
src/: main.cc
src/libligma/: action.cc  action_set.cc  asset.cc  document.cc  first_set.cc  follow_set.cc  goto_set.cc  item.cc  production.cc  record_set.cc  symbol.cc  yaml_document.cc
subprojects/: libutils.wrap
